--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 4
     Case Problem 4
@@ -11,10 +12,28 @@
     Date:   
 
     Filename: br_listing2048.html
-   -->   
+   -->
+    <meta charset="utf-8">
+    <title>Browyer Realty</title>
+    <link rel="stylesheet" href="br_styles.css">
+    <link rel="stylesheet" href="br_reset.css">
 </head>
 
-<body>   
+<body>
+    Listing 20481
+    =============
+    Paradise found! This custom-built brand new home sits proudly on a 6.8-acre
+    high wooded site overlooking a 300-acre nature conservancy. The setting is
+    exceptional, and the home is every bit as exciting! A bright, open layout is
+    enhanced by vaulted ceilings, hardwood and tumbled, ceramic flooring, custom
+    maple cabinetry, upgraded fixtures, numerous windows, and incredible views.
+
+    There is much more. The property includes a 40x54 storage building - perfect
+    for a large boat and machinery. An exposed walkout on lower level leads down to
+    a beautiful wooded area.
+
+    An extra bathroom, bedroom, and family room can be added to the unfinished
+    basement for more living space.
 </body>
 
 </html>
