--- a/index.html
+++ b/index.html
@@ -15,25 +15,101 @@
    -->
     <meta charset="utf-8">
     <title>Browyer Realty</title>
-    <link rel="stylesheet" href="br_styles.css">
     <link rel="stylesheet" href="br_reset.css">
+    <link rel="stylesheet" href="br_styles.css">
+
+
 </head>
 
 <body>
-    Listing 20481
-    =============
-    Paradise found! This custom-built brand new home sits proudly on a 6.8-acre
-    high wooded site overlooking a 300-acre nature conservancy. The setting is
-    exceptional, and the home is every bit as exciting! A bright, open layout is
-    enhanced by vaulted ceilings, hardwood and tumbled, ceramic flooring, custom
-    maple cabinetry, upgraded fixtures, numerous windows, and incredible views.
+    <header>
+        <img id="cool" src="br_logo.png" alt="">
+        <nav id="nav1">
+            <ul>
+                <li>
+                    <a href="#">Residential</a>
+                </li>
+                <li>
+                    <a href="#">Business</a>
+                </li>
+                <li>
+                    <a href="#">Properties</a>
+                </li>
+                <li>
+                    <a href="#">Rentals</a>
+                </li>
+                <li>
+                    <a href="#">Appraisals</a>
+                </li>
+            </ul>
+        </nav>
+        <nav id="nav2">
+            <ul>
+                <li>
+                    <a href="#">More Details
 
-    There is much more. The property includes a 40x54 storage building - perfect
-    for a large boat and machinery. An exposed walkout on lower level leads down to
-    a beautiful wooded area.
 
-    An extra bathroom, bedroom, and family room can be added to the unfinished
-    basement for more living space.
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Map</a>
+                </li>
+                <li>
+                    <a href="#">Request a Showing</a>
+                </li>
+                <li>
+                    <a href="#">Other Listings</a>
+                </li>
+            </ul>
+        </nav>
+
+
+
+
+    </header>
+
+    <article id="len1">
+        <h2> Paradise found! </h2>
+
+        This custom-built brand new home sits proudly on a 6.8-acre
+        high wooded site overlooking a 300-acre nature conservancy. The setting is
+        exceptional, and the home is every bit as exciting! A bright, open layout is
+        enhanced by vaulted ceilings, hardwood and tumbled, ceramic flooring, custom
+        maple cabinetry, upgraded fixtures, numerous windows, and incredible views.
+
+        There is much more. The property includes a 40x54 storage building - perfect
+        for a large boat and machinery. An exposed walkout on lower level leads down to
+        a beautiful wooded area.
+
+        An extra bathroom, bedroom, and family room can be added to the unfinished
+        basement for more living space.
+    </article>
+    <article id="len2">
+        <h2>Listing Description</h2>
+
+        Address:
+        Listing 2048
+        414 Mandel Road
+        Owatonna, MN 55060
+
+        List Price: $412,800
+        Square Feet: 3,300
+        Bedrooms: 4
+        Baths: 2-1/2
+    </article>
+
+    <img class="wow" src="br_photo2.png" alt="">
+
+    <img class="wow" src="br_photo4.png" alt="">
+    <img class="wow" src="br_photo5.png" alt="">
+    <img class="hello" src="br_photo6.png" alt="">
+    <img class="hello" src="br_photo7.png" alt="">
+    <img class="hello" src="br_photo8.png" alt="">
+    <img class="hello" src="br_photo9.png" alt="">
+
 </body>
+<footer>
+
+</footer>
 
 </html>
